Add Button tests. Add Checkbox tests

--- a/package.json
+++ b/package.json
@@ -16,10 +16,17 @@
     "sass": "^1.62.1",
     "web-vitals": "^2.1.4"
   },
+  "jest": {
+    "coverageThreshold": {
+      "global": {
+        "lines": 80
+      }
+    }
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
