--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "cypress": "^12.12.0",
     "eslint": "^8.41.0",
     "eslint-plugin-react": "^7.32.2"
   }
