--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm run lint
 
   test:
-    name: Run tests and linter
+    name: Run tests
     runs-on: ubuntu-latest
 
     steps:
